--- a/about.html
+++ b/about.html
@@ -31,67 +31,77 @@
             </div>
         </div>
 
-        <div id="page-wrap">
 
-            <div class="clear"></div>
+    </div>
 
-            <dl>
-                <dd class="clear"></dd>
+    <div id="page-wrap">
 
-                <dt>Education</dt>
-                <dd>
-                    <h2>
-                        Borough of Manhattan Community College </h2>
-                    <p><strong>Major:</strong> Multimedia Programming<br />
-                        <strong>Minor:</strong> Graphic Design</p>
-                </dd>
+        <div class="clear"></div>
 
-                <dd class="clear"></dd>
+        <dl>
+            <dd class="clear"></dd>
 
-                <dt>Skills</dt>
-                <dd>
-                    <h2>Office skills</h2>
-                    <p>Office and records management, database administration, event organization, customer support, travel coordination</p>
+            <dt>Education</dt>
+            <dd>
+                <h2>
+                    Borough of Manhattan Community College </h2>
+                <p><strong>Major:</strong> Multimedia Programming<br />
+                    <strong>Minor:</strong> Graphic Design</p>
+            </dd>
 
-                    <h2>Computer skills</h2>
-                    <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Windows</p>
-                </dd>
+            <dd class="clear"></dd>
 
-                <dd class="clear"></dd>
+            <dt>Skills</dt>
+            <dd>
+                <h2>Design skills</h2>
+                <p>Photomanipulation, Logo, stationary prints, Layout, Mocku-ups.</p>
 
-                <dt>Experience</dt>
-                <dd>
-                    <h2>Doomsday Cult <span>Leader/Overlord - Baton Rogue, LA - 1926-2010</span></h2>
-                    <ul>
-                        <li>Inspired and won highest peasant death competition among servants</li>
-                        <li>Helped coordinate managers to grow cult following</li>
-                        <li>Provided untimely deaths to all who opposed</li>
-                    </ul>
+                <h2>Computer skills</h2>
+                <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Cinema 4D, Zbrush, Responsive Web Design, Windows and Mac.</p>
+            </dd>
 
-                    <h2>The Watering Hole <span>Bartender/Server - Milwaukee, WI - 2009</span></h2>
-                    <ul>
-                        <li>Worked on grass-roots promotional campaigns</li>
-                        <li>Reduced theft and property damage percentages</li>
-                        <li>Janitorial work, Laundry</li>
-                    </ul>
-                </dd>
+            <dd class="clear"></dd>
 
-                <dd class="clear"></dd>
+            <dt>Experience</dt>
+            <dd>
+                <h2>NYC <span>Health Deparment/ Assistant Graphic Designer   Apr/2018 - Present</span></h2>
+                <ul>
+                    <li>Created and designed pamphlet Illustration concepts from sketches and Adobe Photoshop.
+                    </li>
+                    <li>Assist in the production of organization's annual special edition publications dealing with ad sponsors, layout and design, proofing and coordination of print.
 
-                <dt>Hobbies</dt>
-                <dd>World Domination, Deep Sea Diving, Murder Most Foul</dd>
+                    </li>
+                </ul>
+                
+                <h2>NY City <span>Wraps/Graphic Designer   Mar/2017 - Mar/2018</span></h2>
+                <ul>
+                    <li>Lead in the design, development and implementation of the graphic, layout, and production of vast projects. Supervise the assessment </li>
+                    <li>Supervise the assessment of all graphic materials in order to ensure the quality and accuracy in the design
+                    </li>
+                </ul>
 
-                <dd class="clear"></dd>
+                <h2>Freelance  <span>Graphic DesignerServer    May/2013 - Present</span></h2>
+                <ul>
+                    <li>Service a variety of businesses with various graphic designs from business cards, flyers, post cards and menus.
+</li>
+                    <li>Consistently meeting with clients needs and deadlines.
+</li>
+                    <li>Produce detailed visuals and illustrations while creating design specific to client request and desires.
+</li>
+                </ul>
+            </dd>
 
-                <dt>References</dt>
-                <dd>Available on request</dd>
+            <dd class="clear"></dd>
 
-                <dd class="clear"></dd>
-            </dl>
+            <dt>Hobbies</dt>
+            <dd>World Domination, Deep Sea Diving, Murder Most Foul</dd>
 
-            <div class="clear"></div>
+            <dd class="clear"></dd>
 
-        </div>
+            <dd class="clear"></dd>
+        </dl>
+
+        <div class="clear"></div>
 
     </div>
     <div class="grid footer">
