--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="main">
     <div class="container">
         <div class="grid header">
-           <img id="logo-main" src='img/logo_main.svg'/>
+            <img id="logo-main" src='img/logo_main.svg' />
             <div id="menu" class="panel" role="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -31,13 +31,16 @@
             </div>
         </div>
         <div class="grid sidebar">
-            <p>“It’s through mistakes that you actually can grow. 
-You have to get bad in order to get good."</p>
+            <p>“It’s through mistakes that you actually can grow. You have to get bad in order to get good."</p>
         </div>
         <div class="grid content">
-        <p>I discovered my passion for design when I was a freshman in High School; It was then when it became clear what I wanted to do for a living. I'm pursuing my career at Borough of Manhattan Community College where I'm studing my major in Multimedia Programming.
-        <br>
-        <br> A year later I took a begginer’s Web class, where I discovered the love for code. After that, I switched my major to Interactive Design and started the never-ending journey of becoming a web developer along with sharpening my eye for design.</p>
+            <p>I discovered my passion for design when I was a freshman in High School; It was then when it became clear what I wanted to do for a living. I'm pursuing my career at Borough of Manhattan Community College where I'm studing my major in Multimedia Programming.
+                <br>
+                <br>I’m constantly learning web technologies and other design related topics, currently playing around with Javascript and JQuery. I’m a skilled in many areas of design and development.
+                <br>
+                <br>My Design process always starts with a pencil and paper, scribbling ideas and concepts, thinking about the problem and the solution.
+                <br> Once I have an idea of what I want to achieve, I’ll then sit down at my computer and start with wire frames and low level mockups. Then add the imagery, typography design and details.
+                <br> One of the things I love about my Job, is the great tools I get to work with every day, here are some of the tools I use in my work.</p>
         </div>
         <div class="grid footer">
             <p>© 2018 Johann Paulino graphic designer</p>
@@ -50,6 +53,5 @@ You have to get bad in order to get good."</p>
     $(document).ready(function() {
         $('.menu-link').bigSlide();
     });
-
 </script>
 </html>
