--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="menu" class="panel" role="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="Resume.html">Resume</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact Me</a></li>
                     <li><a href="blog.html">Blog</a></li>
